[build-system]
requires = ["setuptools >= 65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bptk_py"
dynamic = ["version"]
dependencies = [
  "pandas==2.2.3",
"matplotlib==3.9.2",
"scipy==1.14.1",
"numpy==2.1.2",
"ipywidgets==8.1.5",
"pyyaml==6.0.1",
"xlsxwriter==3.1.9",
"parsimonious==0.10.0",
"xmltodict==0.12.0",
"jinja2==3.1.4",
"sympy==1.13.3",
"distlib==0.3.8",
"cachetools==5.5.0",
"requests==2.31.0",
"flask==3.0.3",
"jsonpickle==3.0.2"

]
requires-python = ">=3.11"
authors = [
  {name = "transentis", email = "support@transentis.com"}
]
maintainers = [
  {name = "transentis", email = "support@transentis.com"}
]
description = "System Dynamics and Agent-based Modeling in Python"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["system dynamics", "agent based modeling"]
classifiers = [

  "Programming Language :: Python :: 3.11"
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://bptk.transentis.com"
Documentation = "https://bptk.transentis.com"
Repository = "https://github.com/transentis/bptk_py"