[build-system]
requires = ["setuptools >= 65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bptk-py"
dynamic = ["version"]
dependencies = [
"pandas==2.3.0",
"matplotlib==3.10.3",
"scipy==1.15.3",
"numpy==2.3.1",
"ipywidgets==8.1.7",
"xlsxwriter==3.2.5",
"parsimonious==0.10.0",
"xmltodict==0.12.0",
"jinja2==3.1.6",
"sympy==1.14.0",
"distlib==0.3.9",
"cachetools==6.1.0",
"requests==2.32.4",
"flask==3.1.1",
"jsonpickle==4.1.1"

]
requires-python = ">=3.11"
authors = [
  {name = "transentis", email = "support@transentis.com"}
]
maintainers = [
  {name = "transentis", email = "support@transentis.com"}
]
description = "A python simulation engine for System Dynamics & Agent based models"
readme = "README.md"
keywords = ["system dynamics", "agent based modeling"]
classifiers = [
   "Programming Language :: Python :: 3",
       "License :: OSI Approved :: MIT License",
          "Operating System :: OS Independent"
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://bptk.transentis.com"
Documentation = "https://bptk.transentis.com"
Repository = "https://github.com/transentis/bptk_py"